feat: mqtt job queue

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=IOT-Project
 APP_ENV=local
 APP_KEY=base64:kRu7ka+BosFwZOZZCNQV4uqi9zXEiD/nmrQAFaSYlss=
 APP_DEBUG=true
@@ -28,7 +28,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=iot_project
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -36,7 +36,7 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=reverb
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -66,3 +66,22 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+REVERB_APP_ID=565001
+REVERB_APP_KEY=0phypotf9leglzfaaoeh
+REVERB_APP_SECRET=dmi5xmju2ljywqtwb7pq
+REVERB_HOST="localhost"
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
+
+MQTT_HOST=202.44.44.233
+MQTT_PORT=1883
+MQTT_USERNAME=null
+MQTT_PASSWORD=null
+MQTT_CLIENT_ID=laravel-client
+MQTT_TOPIC=rfid/location
