--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "pusher-js": "^8.4.0",
         "tailwindcss": "^3.1.0",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "-": "^0.0.1",
+        "save": "^2.9.0"
     }
 }
